force-app/main/default/objects/Account/fields/Engine_Type__c.field-meta.xml
<CustomField>
    <fullName>Engine_Type__c</fullName>
    <description>Type of engine powering the yacht</description>
    <label>Engine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diesel</fullName>
                <default>true</default>
                <label>Diesel</label>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>