force-app/main/default/objects/Account/fields/Home_Port__c.field-meta.xml
<CustomField>
    <fullName>Home_Port__c</fullName>
    <description>Primary port where yacht is based</description>
    <label>Home Port</label>
    <length>100</length>
    <type>Text</type>
</CustomField>