force-app/main/default/objects/Account/fields/Monthly_Budget__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Budget__c</fullName>
    <description>Monthly operating budget for yacht</description>
    <label>Monthly Budget</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>