force-app/main/default/objects/Account/fields/Yacht_Length__c.field-meta.xml
<CustomField>
    <fullName>Yacht_Length__c</fullName>
    <description>Length of the yacht in feet</description>
    <inlineHelpText>Enter the overall length of the yacht in feet</inlineHelpText>
    <label>Yacht Length (ft)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>