force-app/main/default/objects/Account/fields/Yacht_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Yacht_Owner_Type__c</fullName>
    <label>Yacht Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Owner</fullName>
                <default>true</default>
                <label>Private Owner</label>
            </value>
            <value>
                <fullName>Charter Company</fullName>
            </value>
            <value>
                <fullName>Management Company</fullName>
            </value>
            <value>
                <fullName>Corporate Fleet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>